envoy/http_connection_manager/request_matching/sample-2-header-matching.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: hello_service
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: route
            virtual_hosts:
            - name: vhost
              domains: ["*"]
              routes:
              - match:
                  path: "/1"
                  headers:
                  - name: ":method"
                    string_match:
                      exact: POST
                  - name: "debug"
                    string_match:
                      exact: "1"
                direct_response:
                  status: 422
              - match:
                  path: "/2"
                  headers:
                  - name: "path"
                    safe_regex_match:
                      google_re2: {}
                      regex: ^/hello/\d+$
                direct_response:
                  status: 200
                  body:
                    inline_string: "regex"
              - match:
                  path: "/3"
                  headers:
                  - name: "priority"
                    range_match:
                      start: 1
                      end: 6
                direct_response:
                  status: 200
                  body:
                    inline_string: "priority"
              - match:
                  path: "/4"
                  headers:
                  - name: "test"
                    present_match: true
                direct_response:
                  status: 500


# $ curl -v -X POST -H "debug: 1" localhost:10000/1
# ...
# > User-Agent: curl/7.64.0
# > Accept: */*
# > debug: 1
# >
# < HTTP/1.1 422 Unprocessable Entity

# $ curl -H "path: /hello/123" localhost:10000/2
# regex

# $ curl -H "priority: 3" localhost:10000/3
# priority


# $ curl -v -H "test: tst" localhost:10000/4
# ...
# > User-Agent: curl/7.64.0
# > Accept: */*
# > test: tst
# >
# < HTTP/1.1 500 Internal Server Error
