envoy/http_connection_manager/request_matching/sample-3-query-matching.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: hello_service
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: route
            virtual_hosts:
            - name: vhost
              domains: ["*"]
              routes:
              - match:
                  path: "/1"
                  query_parameters:
                  - name: test
                    present_match: true
                direct_response:
                  status: 422
              - match:
                  path: "/2"
                  query_parameters:
                  - name: env
                    string_match:
                      prefix: env_
                      ignore_case: true
                direct_response:
                  status: 200
              - match:
                  path: "/3"
                  query_parameters:
                  - name: debug
                    string_match:
                      exact: "true"
                direct_response:
                  status: 500


# $ curl -v localhost:10000/2?env=eNv_prod
# ...
# > GET /2?env=eNv_prod HTTP/1.1
# > Host: localhost:10000
# > User-Agent: curl/7.64.0
# > Accept: */*
# >
# < HTTP/1.1 200 OK

# $ curl -v localhost:10000/3?debug=true
# ...
# > GET /3?debug=true HTTP/1.1
# > Host: localhost:10000
# > User-Agent: curl/7.64.0
# > Accept: */*
# >
# < HTTP/1.1 500 Internal Server Error
